--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -8,9 +8,9 @@ on:
   workflow_dispatch:
     inputs:
       custom_message:
-        description: '自定义消息'
+        description: '这是一个按钮'
         required: false
-        default: '手动触发的通知'
+        default: ''
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -18,6 +18,7 @@ env:
 jobs:
   notify:
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
       - name: Send notification to Feishu
@@ -25,7 +26,16 @@ jobs:
         with:
           FEISHU_BOT_WEBHOOK: ${{ secrets.FEISHU_BOT_WEBHOOK }}
           FEISHU_BOT_SIGNKEY: ${{ secrets.FEISHU_BOT_SIGNKEY }}
-          MSG_TEXT: ${{ github.event.inputs.custom_message }}
+          MSG_TEXT: |
+            notation字号
+            standard emoji 😁😢🌞💼🏆❌✅
+            *italic*
+            **bold**
+            ~~strikethrough~~
+            [differentiated redirection]($urlVal)
+            <at id=all></at>"
+            // Content written using markdown syntax
+                        
 
   notify-on-push:
     runs-on: ubuntu-latest
